<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout
        android:id="@+id/score_board"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/currScoreText"
            android:text="@string/score"
            android:gravity="left"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:layout_marginBottom="-10sp"
            android:paddingLeft="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/currScoreText"
            android:id="@+id/score"
            android:gravity="left"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="35sp"
            android:paddingLeft="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/highScoreText"
            android:text="@string/best_score"
            android:layout_marginBottom="-10sp"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:paddingRight="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/highScoreText"
            android:id="@+id/highScore"
            android:gravity="right"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@android:color/darker_gray"
            android:paddingRight="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:contentDescription="@string/divider"
            android:layout_below="@id/highScore"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/score_board"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <GridView
            android:layout_gravity="center"
            android:listSelector="@android:color/transparent"
            android:id="@+id/grid_view"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numColumns="4"
            tools:context=".MainActivity">
        </GridView>
    </LinearLayout>
</RelativeLayout>
